<resources>
    <string name="app_name">IntentMuhajirin</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIFITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_drink">PILIH MINUMAN YANG KAMU SUKA</string>
    <string name="_chocolate">Coklat</string>
    <string name="_capuccino">Capucino</string>
    <string name="_strawberry">Straberi</string>
    <string name="_vanilla">Vanila</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DI TERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>

</resources>